syntax = "proto3";

package kvmrun.api.services.hardware.v1;

import "types/types.proto";

option go_package = "github.com/0xef53/kvmrun/api/services/hardware/v1;hardware";

service HardwareService {
    rpc ListPCI(ListPCIRequest) returns (ListPCIResponse);
}

message ListPCIRequest {
}

message ListPCIResponse {
    repeated types.PCIDevice devices = 1;
}
